@@ -1,6 +1,8 @@
 # Distributed under the Boost Software License, Version 1.0.
 # See http://www.boost.org/LICENSE_1_0.txt
 
+## Changes by Ramon Casero <rcasero@gmail.com> for project Gerardus
+
 cmake_minimum_required(VERSION 2.8.8)
 project(BoostChrono CXX)
 
@@ -49,3 +51,8 @@ target_link_libraries(boost_chrono
 #   INCLUDE_DIRECTORIES
 #     include
 #   )
+
+# install compiled libraries
+install(TARGETS
+  boost_chrono
+  DESTINATION ${GERARDUS_SOURCE_DIR}/lib)
